--- a/pages/index.html
+++ b/pages/index.html
@@ -1,9 +1,12 @@
-
-<head>
-
-</head>
+<!DOCTYPE html>
+<html>
 <body>
     <h1>
-        Hello, world!
+        GLOT
     </h1>
+    <p>
+        <a href="coverage.html">Coverage</a>
+    </p>
 </body>
+</html>
+
