--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     </h1>
     <p>
         <a href="coverage.html">Coverage</a>
+        <a href="html/index.html">Docs</a>
     </p>
 </body>
 </html>
