--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,12 @@
         GLOT
     </h1>
     <p>
+    Welcome to glot!
+    </p>
+    <p>
         <a href="coverage.html">Coverage</a>
+    </p>
+    <p>
         <a href="html/index.html">Docs</a>
     </p>
 </body>
